# vulcan

./: Cargo.toml  README.md
src/: main.rs
src/definitions/: communication.rs  dmx.rs  mod.rs
src/system_interface/: backup_handler.rs  dmx_interface.rs  mod.rs
src/web_interface/: mod.rs
