[package]
name = "vulcan"
version = "1.0.0"
authors = ["Patton Doyle <patton@DecodeDetroit.com>"]
description = "Realtime Remote-Controlled DMX Controller"
license = "GPL-3.0-or-later"
edition="2024"

[profile.release]
lto = true

[dependencies]
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
warp = "0.4"
async-stream = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio-serial = "5.4"
clap = { version = "4.5", features = ["derive"] }
redis = "0.32"

